Java P11: salvage 8 chunks from the killed session — T01 13-series + 14/14b, T04 02c + 06
Recovered uncommitted fork output, QC'd rather than assumed:
- T01 01-junit-5: 13-timeouts (297) + 13b-thread-modes (226) + 13c-timeout-configuration
  (234) + 13d-what-a-timeout-is-for (261); 14-flaky-tests (269) + 14b-time-and-determinism
  (267). Positions 47-52, contiguous.
- T04 04-mockito: 02c-choosing-a-mock-maker (204) @ pos 5, 06-argument-captors (242) @ pos 23.
- 02b-the-inline-mock-maker +81 lines, purely additive (Maven surefire @{argLine} setup and
  its documented forked-VM crash, -XX:+EnableDynamicAgentLoading as a flagged stopgap,
  equals/hashCode/private limits, 2 gotchas, 2 questions). Verified as an expansion, not a
  trim: git diff --stat shows 0 deletions.
- The other 17 T04 edits are the +1 sidebar_position shift from 02c's insertion at 5.

QC actually run: 0 files over 300, 0 MDX hazards, positions 1-52 (T01) and 1-23 (T04)
gap-free. Remaining dangling links are all forward references into chunks not yet written
(T04 07/08/10b/11/12, T01 14c-14e, the T01 and T08 indexes).

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01TMZ8cBnM7KxooPhRfT2BLx